vbnc/vbnc/tests/Errors/FunctionDec.vb
Module FunctionDec
Public Function test(ByVal a,
                     ByVal b
                     , ByVal c)
        Return 1
    End Function
End Module
